# rl-experiments

./: .env.example  .gitignore  .skyignore  README.md  cluster.yaml  decrypt-secrets.sh  download-model.sh  encrypt-secrets.sh  fix-numa-topology.sh  hello.py  launch-cluster.sh  pyproject.toml  secrets.tar.gpg  setup.sh
experiments/: 001-nyt-connections.ipynb  002-train.ipynb  003-benchmark.ipynb  003-nyt-connections-benchmarks.ipynb  004-skypilot.ipynb  005-vllm.ipynb  006-grpo.ipynb  007-iterative-grpo.ipynb  008-reinforce.ipynb  008-scratchpad.ipynb  009-reinforce-small-batches.ipynb  009-zebra-grid.ipynb  010-reinforce.ipynb  011-reinforce-small-batches.ipynb  012-grpo.ipynb  013-grpo.ipynb  014-grpo.ipynb  015-grpo.ipynb  016-grpo.ipynb  017-temporal-clue.ipynb  018-eight-h100s-tests.ipynb  019-arc-agi.ipynb  020-tune-performance.ipynb  021-checkpointing.ipynb  022-rl123-repro.ipynb  023-distilled-qwen-7b.ipynb  024-clipping.ipynb  025-clipping.ipynb  026-dynamic-learning-rate.ipynb  027-entropy-bonus.ipynb  028-zebra-grid.ipynb  029-distilled-qwen-7b.ipynb  030-qwen-14b.ipynb  033-8xH100-benchmarks.ipynb  034-surprise-bonus.ipynb  035-surprise-bonus.ipynb  036-surprise-bonus.ipynb  037-surprise-bonus.ipynb  038-tune-performance.ipynb  039-tune-performance.ipynb  (+36 more)
experiments/data/: chat-completion-requests.jsonl
experiments/data/corbt/connections-games/: test-00000-of-00001.parquet  train-00000-of-00001.parquet
experiments/data/eric27n/NYT-Connections/: Connections_Data.csv
experiments/lib/: __init__.py  arc_agi.py  chat_completions.py  grpo.py  inference_early_stop.py  mlp_head.py  mlp_head_checkpointer.py  models.py  nyt_connections.py  pack.py  ppo.py  recipe.py  stream.py  task.py  tasks.py  temporal_clue.py  token_schedulers.py  tokenize.py  tokenizer.py  train.py  tune.py  types.py  utils.py  vllm.py  zebra_grid.py
notebooks/: 001-nyt-connections.ipynb
