[project]
name = "openpipe-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "cudo-compute==0.1.10",
    "obstore>=0.4.0",
    "openai>=1.61.1",
    "polars>=1.22.0",
    "skypilot[lambda,runpod,cudo]>=0.7.0",
    "torch>=2.5.1",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "vllm>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "huggingface-hub[cli]>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
