[project]
name = "openpipe-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioitertools>=0.12.0",
    "bitsandbytes>=0.45.2",
    "black>=25.1.0",
    "cudo-compute==0.1.10",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.0",
    "obstore>=0.4.0",
    "openai>=1.61.1",
    "polars>=1.22.0",
    "seaborn>=0.13.2",
    "skypilot[cudo,lambda,runpod]>=0.8.0",
    "torch>=2.5.1",
    "torchao>=0.8.0",
    "torchtune",
    "vllm>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "huggingface-hub[cli]>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
torchtune = { git = "https://github.com/pytorch/torchtune", rev = "4b6877a6ef31a1f987c27594eaf8fe467b5ab785" }
