[project]
name = "openpipe-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioitertools>=0.12.0",
    "bitsandbytes>=0.45.2 ; sys_platform == 'linux'",
    "black>=25.1.0",
    "cudo-compute==0.1.10",
    "datasets==3.3.0",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.0",
    "obstore>=0.4.0",
    "openai>=1.61.1",
    "polars>=1.22.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "skypilot[cudo,do,gcp,lambda,runpod]",
    "torch>=2.5.1",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "trl>=0.15.2",
    "vllm>=0.7.0",
    "wandb>=0.19.6",
]

[tool.uv]
dev-dependencies = [
    "huggingface-hub[cli]>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
